# jvrc_description

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: jvrc_description.launch.py
libraries/python/: .gitignore  pyproject.toml
meshes/: L_ELBOW_P_S.dae  L_ELBOW_Y_S.dae  L_HIP_R_S.dae  L_HIP_Y_S.dae  L_LINDEX_S.dae  L_LLITTLE_S.dae  L_LTHUMB_S.dae  L_SHOULDER_P_S.dae  L_SHOULDER_Y_S.dae  L_UINDEX_S.dae  L_ULITTLE_S.dae  L_UTHUMB_S.dae  L_WRIST_Y_S.dae  NECK_P_S.dae  NECK_Y_S.dae  PELVIS_S.dae  R_ANKLE_P_S.dae  R_ELBOW_P_S.dae  R_ELBOW_Y_S.dae  R_HIP_R_S.dae  R_HIP_Y_S.dae  R_LINDEX_S.dae  R_LLITTLE_S.dae  R_LTHUMB_S.dae  R_SHOULDER_P_S.dae  R_SHOULDER_Y_S.dae  R_UINDEX_S.dae  R_ULITTLE_S.dae  R_UTHUMB_S.dae  R_WRIST_Y_S.dae  WAIST_R_S.dae  WAIST_Y_S.dae
meshes/back/: L_ANKLE_P_S.dae  L_KNEE_S.dae  R_KNEE_S.dae
rsdf/jvrc1/: L_ANKLE_P_S.rsdf  R_ANKLE_P_S.rsdf  l_wrist.rsdf  r_wrist.rsdf
urdf/: jvrc1.urdf
