<package>
  <name>jvrc_description</name>
  <version>1.0.4</version>
  <description>Description package for the JVRC-1 robot</description>
  <author>Fumio Kanehiro</author>
  <author>Kin'ichi Watanabe</author>
  <author>Pierre Gergondet</author>
  <author>Shin'ichiro Nakaoka</author>
  <author>Shizuko Hattori</author>
  <author>Stéphane Caron</author>
  <author>Yosuke Matsusaka</author>
  <maintainer email="stephane.caron@normalesup.org">Stéphane Caron</maintainer>
  <license>BSD</license>
  <url>https://github.com/stephane-caron/jvrc_description</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
