<?xml version="1.0"?>
<package>
  <name>jvrc_description</name>
  <version>1.0.4</version>
  <description>Description package for the JVRC-1 robot</description>

  <author>Fumio Kanehiro</author>
  <author>Kin'ichi Watanabe</author>
  <author>Pierre Gergondet</author>
  <author>Shin'ichiro Nakaoka</author>
  <author>Shizuko Hattori</author>
  <author>Stéphane Caron</author>
  <author>Yosuke Matsusaka</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="stephane.caron@normalesup.org">Stéphane Caron</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <url>https://github.com/robot-descriptions/jvrc_description</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
